Fix z-index issue with brand band

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5, h6 {
   background: $white;
   overflow-x: scroll;
   overflow-y: hidden;
-  z-index: 2;
+  z-index: 10;
   box-shadow: $big-shadow;
 
   .header {
@@ -36,33 +36,34 @@ h1, h2, h3, h4, h5, h6 {
     right: 0;
     height: $header-height;
   }
+}
 
-  .brand {
-    position: fixed;
-    top: 0;
-    left: $nav-width-desktop;
-    right: 0;
-    height: $header-height;
-    background: $brand-gradient;
+.brand {
+  position: fixed;
+  top: 0;
+  left: $nav-width-desktop;
+  right: 0;
+  height: $header-height;
+  background: $brand-gradient;
+  align-items: center;
+  box-shadow: $big-shadow;
+  z-index: 5;
+
+  .brand-share {
+    margin-right: auto;
+    margin-left: 1.5rem;
+  }
+
+  .brand-logo {
+    display: flex;
     align-items: center;
-    box-shadow: $big-shadow;
+    background: $white;
+    width: 200px;
+    height: $header-height;
+    padding: 0 1rem;
 
-    .brand-share {
-      margin-right: auto;
-      margin-left: 1.5rem;
-    }
-
-    .brand-logo {
-      display: flex;
-      align-items: center;
-      background: $white;
-      width: 200px;
-      height: $header-height;
-      padding: 0 1rem;
-
-      img {
-        width: 100%;
-      }
+    img {
+      width: 100%;
     }
   }
 }
@@ -106,7 +107,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   .nav-menu {
-    top: $header-height;
+    top: 0;
     width: $nav-width-desktop;
     right: auto;
     height: 100%;
@@ -114,8 +115,8 @@ h1, h2, h3, h4, h5, h6 {
     overflow-x: hidden;
 
     .header {
-      width: $nav-width-desktop;
-    } 
+      position: static;
+    }
   }
 
   .content {
@@ -134,12 +135,12 @@ h1, h2, h3, h4, h5, h6 {
 
   .admin-bar {
     .header,
-    .brand {
+    .brand,
+    .nav-menu {
       top: 32px;
     }
   
-    .map,
-    .nav-menu {
+    .map {
       top: $header-height + 32px;
     }
   }
