--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -8,4 +8,8 @@
 	.content {
 		position: static;
 	}
+
+	.brand {
+		left: 0;
+	}
 }
